--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -23,7 +23,7 @@ body,html{
     scroll-behavior: auto!important;
     scroll-padding-top: 90px!important;
     overflow-x:hidden!important;
-    width:100%!important;
+    width:100%;
     // overflow-x: hidden!important; /* Prevents horizontal scrolling */
     // margin: 0!important;
     // padding: 0!important;
